--- a/Mywebsite423.html
+++ b/Mywebsite423.html
@@ -190,10 +190,17 @@ Feel free to adapt these service descriptions to better fit the specific offerin
             <h2>Contact Us</h2>
             <p>We’re here to help! Whether you have questions about admissions, student services, or campus life, our team is ready to assist you. Reach out to us through the methods below, and we’ll get back to you as soon as possible.
 
+</body>
+    </center>
 General Inquiries
-For general questions or information about [College Name], please contact us via:
+For general questions or information about Negros College Inc, please contact us via:
 
+    <body>
+        <center>
+            
+        </center>
+    </body>
 Phone: General Phone Number
-Email: Negros College@gmail.com
-Address: Ayungon Negros Oriental, Ayungon, Philippines, 1234.</p>
+Email: NegrosCollege@gmail.com
+Address: Tampucon 2, Ayungon Negros Oriental, Ayungon, Philippines, 6210.</p>
    
